# Physical-AI-and-Humanoid-Robotics-Textbook

./: .gitignore  .prettierignore  README.md  output.txt  vercel.json
.github/workflows/: deploy.yml
.specify/templates/: plan-template.md  spec-template.md
backend/: Dockerfile  pyproject.toml
backend/src/backend/: __init__.py  config.py  db.py  debug_connections.py  ingest.py  list_models.py  main.py  test_gemini.py
backend/src/backend/api/: auth.py  chat.py
backend/src/backend/models/: chat.py  user.py
backend/tests/: test_chat.py  test_main.py
frontend/: docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
frontend/docs/: appendices.mdx  conclusion.mdx  introduction.mdx  module1.mdx  module2.mdx  module3.mdx  module4.mdx
frontend/docs/appendices/: custom-robot-build-guide.mdx  depth-cameras.mdx  git-and-github.mdx  linux-and-bash.mdx  microcontrollers.mdx  motor-drivers.mdx  python-for-robotics.mdx  slam.mdx
frontend/docs/chapter1/: embodied-intelligence.mdx  humanoid-robotics-overview.mdx  introduction-to-physical-ai.mdx
frontend/docs/chapter2/: _category_.json  computer-vision-for-robotics.mdx  sensor-fusion.mdx  sensors-and-data-acquisition.mdx
frontend/docs/chapter3/: _category_.json  control-systems.mdx  kinematics-and-dynamics.mdx  locomotion-and-manipulation.mdx
frontend/docs/chapter4/: _category_.json  imitation-and-human-in-the-loop-learning.mdx  machine-learning-for-physical-ai.mdx  reinforcement-learning-in-robotics.mdx
frontend/docs/chapter5/: _category_.json  gazebo-simulators.mdx  (+4 more)
frontend/src/: theme.d.ts
new-frontend/: package.json
specs/001-physical-ai-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-rag-chatbot/: plan.md  spec.md  tasks.md
(+47 files in other folders)
